Old files have been deleted

--- a/demos/datepicker/days-range.html
+++ b/demos/datepicker/days-range.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Patched UI datepicker demo</title>
-		<script type="text/javascript" src="js/jquery-1.7.2.js"></script>
-		<script type="text/javascript" src="js/jquery.ui.core.js"></script>
-		<script type="text/javascript" src="js/jquery.ui.datepicker.js"></script>
-		<script type="text/javascript" src="js/jquery-ui-i18n.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/jquery-ui-1.8.22.custom.css">
+		<title>Datepicker, range of days</title>
+		<script type="text/javascript" src="/jquery-1.7.2.js"></script>
+		<script type="text/javascript" src="/ui/jquery.ui.core.js"></script>
+		<script type="text/javascript" src="/ui/jquery.ui.datepicker.js"></script>
+		<script type="text/javascript" src="/js/ui/jquery-ui-i18n.js"></script>
+		<link rel="stylesheet" type="text/css" href="/themes/base/jquery.ui.all.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<script>
 $(document).ready(function() {
